--- a/lab02/1_activation_function.ipynb
+++ b/lab02/1_activation_function.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +83,12 @@
     "    d_output = -2 * neta * output\n",
     "    return (output, d_output)\n",
     "\n",
-    "activation_functions_dict = {'Linear': linear, 'Sigmoid': sigmoid, 'Hyperbolic tangent': htan, 'Gaussian':gaussian}"
+    "def relu(neta):\n",
+    "    output = np.maximum(0, neta)\n",
+    "    d_output = output / neta\n",
+    "    return (output, d_output)\n",
+    "\n",
+    "activation_functions_dict = {'Linear': linear, 'Sigmoid': sigmoid, 'Hyperbolic tangent': htan, 'Gaussian':gaussian, 'ReLu':relu}"
    ]
   },
   {
@@ -95,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,13 +151,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4ea56bb459d345f998546eac00ad8f1c",
+       "model_id": "8f57374cd18343e9937274ac1dc871b9",
        "version_major": 2,
        "version_minor": 0
       },
@@ -172,7 +177,7 @@
        "</p>\n"
       ],
       "text/plain": [
-       "interactive(children=(Dropdown(description='Activation function', index=1, options={'Gaussian': 0, 'Hyperbolic tangent': 1, 'Linear': 2, 'Sigmoid': 3}, value=1), FloatSlider(value=1.0, description='Weight', max=2.0, min=-2.0, step=0.01), Output()), _dom_classes=('widget-interact',))"
+       "interactive(children=(Dropdown(description='Activation function', index=4, options={'Linear': 0, 'Sigmoid': 1, 'Hyperbolic tangent': 2, 'Gaussian': 3, 'ReLu': 4}, value=4), FloatSlider(value=1.0, description='Weight', max=2.0, min=-2.0, step=0.01), Output()), _dom_classes=('widget-interact',))"
       ]
      },
      "metadata": {},
@@ -219,9 +224,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "mlg-bachelor",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "mlg-bachelor"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -233,7 +238,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.4.2"
+   "version": "3.6.4"
   },
   "widgets": {
    "state": {
