Ready to compute

--- a/pw2/02_nam_nk.ipynb
+++ b/pw2/02_nam_nk.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# MLG - Practical Work 02\n",
-    "## Natural men voices vs. natural women voices"
+    "## Natural men voices vs. natural children voices"
    ]
   },
   {
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
     "PATH = '/Users/faku99/HEIG/S6/MLG/labs/pw2/vowels/'\n",
     "\n",
     "EXPERIMENTS = [['nam', 'naf'], ['nam', 'nk'], ['naf', 'nk'], ['naf', 'nam', 'nk'], ['n', 's']]\n",
-    "EXPERIMENT = EXPERIMENTS[0]"
+    "EXPERIMENT = EXPERIMENTS[1]"
    ]
   },
   {
