Farming fucking done, 14h au total

--- a/pw2/04_naf_nam_nk.ipynb
+++ b/pw2/04_naf_nam_nk.ipynb
@@ -403,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -417,24 +417,24 @@
     "                                                          learning_rate=LEARNING_RATE,\n",
     "                                                          momentum=MOMENTUM,\n",
     "                                                          epochs=EPOCHS,\n",
-    "                                                          threshold=0.33)"
+    "                                                          threshold=2/3)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "MSE training:  0.05149131300081333\n",
-      "MSE test:  0.053581533902204506\n",
+      "MSE training:  0.05251812978553909\n",
+      "MSE test:  0.05463674950491789\n",
       "Confusion matrix:\n",
-      "[[ 899.   76.  299.]\n",
-      " [ 113.  743.   61.]\n",
-      " [ 365.   47. 2815.]]\n"
+      "[[ 151.   17.   55.]\n",
+      " [   0.  628.    3.]\n",
+      " [   8.    9. 2608.]]\n"
      ]
     }
    ],
