--- a/pw2/01_nam_naf.ipynb
+++ b/pw2/01_nam_naf.ipynb
@@ -407,6 +407,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "INPUT_NEURONS = dataset.shape[1] - len(ceps)\n",
+    "OUTPUT_NEURONS = len(ceps)\n",
     "EPOCHS = 200\n",
     "N_NEURONS = 20\n",
     "\n",
@@ -461,7 +463,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
