--- a/pw2/9_model_selection.ipynb
+++ b/pw2/9_model_selection.ipynb
@@ -478,6 +478,18 @@
    "language": "python",
    "name": "python3"
   },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.6.4"
+  },
   "widgets": {
    "state": {
     "f7df0ab69b604903958cf654849aa9ee": {
