Modif fitness func

--- a/pw4/GA_evo-TSP.ipynb
+++ b/pw4/GA_evo-TSP.ipynb
@@ -22,7 +22,9 @@
     "    score = 0\n",
     "    values = []\n",
     "    # iterate over the chromosome\n",
-    "    # WTF : inverted bits order and boom\n",
+    "    # Idée : faire un mapping entre les chemins parcourus et un tableau qui contient les valeurs (genre chromosome[i] = distance[i])\n",
+    "    #  Ensuite, si on peut inverser et chercher le minimum alors on cherche direct le minimum\n",
+    "    #           sinon on cherche le max pour 1/somme(chemins) et zou\n",
     "    for i in range(0,len(chromosome),4):\n",
     "        value = chromosome[i]+chromosome[i+1]*2+chromosome[i+2]*4+chromosome[i+3]*8\n",
     "        if (value == 0):\n",
