--- a/pw4/GA_evo-TSP.ipynb
+++ b/pw4/GA_evo-TSP.ipynb
@@ -92,28 +92,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Gen. 0 (0.00%): Max/Min/Avg Fitness(Raw) [8087.74(8678.98)/5042.62(4298.22)/6739.78(6739.78)]\n",
-      "Gen. 10 (10.00%): Max/Min/Avg Fitness(Raw) [5523.70(6833.42)/4201.49(3630.16)/4603.08(4603.08)]\n",
-      "Gen. 20 (20.00%): Max/Min/Avg Fitness(Raw) [5275.39(6147.20)/4011.53(3630.16)/4396.15(4396.15)]\n",
-      "Gen. 30 (30.00%): Max/Min/Avg Fitness(Raw) [4781.45(6289.69)/3777.75(3386.36)/3984.54(3984.54)]\n",
-      "Gen. 40 (40.00%): Max/Min/Avg Fitness(Raw) [5427.97(6524.48)/3991.43(3346.76)/4523.31(4523.31)]\n",
-      "Gen. 50 (50.00%): Max/Min/Avg Fitness(Raw) [5546.55(6834.64)/4089.26(3346.76)/4622.12(4622.12)]\n",
-      "Gen. 60 (60.00%): Max/Min/Avg Fitness(Raw) [4889.32(7233.73)/3886.74(3346.76)/4074.43(4074.43)]\n",
-      "Gen. 70 (70.00%): Max/Min/Avg Fitness(Raw) [5108.21(6501.57)/3911.67(3346.76)/4256.84(4256.84)]\n",
-      "Gen. 80 (80.00%): Max/Min/Avg Fitness(Raw) [4855.20(5452.11)/3643.60(3346.76)/4046.00(4046.00)]\n",
-      "Gen. 90 (90.00%): Max/Min/Avg Fitness(Raw) [5008.37(6283.75)/3846.54(3346.76)/4173.64(4173.64)]\n",
-      "Gen. 100 (100.00%): Max/Min/Avg Fitness(Raw) [5354.99(6111.58)/3858.65(3346.76)/4462.49(4462.49)]\n",
-      "Total time elapsed: 1.008 seconds.\n",
+      "Gen. 0 (0.00%): Max/Min/Avg Fitness(Raw) [8013.80(8301.26)/4782.55(4374.56)/6678.17(6678.17)]\n",
+      "Gen. 50 (16.67%): Max/Min/Avg Fitness(Raw) [5115.11(6055.07)/3827.01(3346.76)/4262.59(4262.59)]\n",
+      "Gen. 100 (33.33%): Max/Min/Avg Fitness(Raw) [5018.98(6099.94)/3817.90(3346.76)/4182.48(4182.48)]\n",
+      "Gen. 150 (50.00%): Max/Min/Avg Fitness(Raw) [5148.75(6051.56)/3830.67(3346.76)/4290.63(4290.63)]\n",
+      "Gen. 200 (66.67%): Max/Min/Avg Fitness(Raw) [5244.68(6313.54)/3909.97(3346.76)/4370.57(4370.57)]\n",
+      "Gen. 250 (83.33%): Max/Min/Avg Fitness(Raw) [5079.00(6871.06)/3948.34(3346.76)/4232.50(4232.50)]\n",
+      "Gen. 300 (100.00%): Max/Min/Avg Fitness(Raw) [5154.29(6523.68)/3929.61(3346.76)/4295.24(4295.24)]\n",
+      "Total time elapsed: 2.281 seconds.\n",
       "- GenomeBase\n",
       "\tScore:\t\t\t 3346.761974\n",
-      "\tFitness:\t\t 3858.651537\n",
+      "\tFitness:\t\t 3929.608979\n",
       "\n",
       "\tParams:\t\t {}\n",
       "\n",
@@ -138,7 +134,7 @@
       "\n",
       "- G1DList\n",
       "\tList size:\t 14\n",
-      "\tList:\t\t [2, 13, 1, 0, 9, 8, 10, 7, 12, 6, 11, 5, 4, 3]\n",
+      "\tList:\t\t [0, 1, 13, 2, 3, 4, 5, 11, 6, 12, 7, 10, 8, 9]\n",
       "\n",
       "\n"
      ]
@@ -165,18 +161,20 @@
     "ga.setMinimax(Consts.minimaxType[\"minimize\"])\n",
     "\n",
     "# Number of generations\n",
-    "ga.setGenerations(100)\n",
+    "ga.setGenerations(300)\n",
     "\n",
     "# In case we want to monitor the evolution process\n",
     "# execute the function current_best every generation\n",
     "ga.stepCallback.set(current_best)\n",
     "\n",
-    "ga.evolve(freq_stats=10)\n",
+    "ga.evolve(freq_stats=50)\n",
     "\n",
     "# Final best solution\n",
     "print(ga.bestIndividual())\n",
     "\n",
-    "save_stats('stats/edge_crossover.csv')"
+    "save_stats('stats/edge_crossover.csv')\n",
+    "\n",
+    "# [1, 13, 2, 3, 4, 5, 11, 6, 12, 7, 10, 8, 9, 0]"
    ]
   }
  ],
