--- a/pw4/GA_evo-TSP.ipynb
+++ b/pw4/GA_evo-TSP.ipynb
@@ -6,17 +6,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import random\n",
+    "# Import modules.\n",
+    "import datetime\n",
     "import numpy as np\n",
+    "import random\n",
+    "\n",
+    "from geopy.distance import vincenty\n",
     "\n",
     "from pyevolve import Crossovers\n",
     "from pyevolve import Consts\n",
     "from pyevolve import G1DList\n",
     "from pyevolve import GSimpleGA\n",
-    "from pyevolve import Selectors\n",
-    "from pyevolve import Statistics\n",
-    "\n",
-    "from geopy.distance import vincenty"
+    "from pyevolve import Statistics"
    ]
   },
   {
@@ -25,29 +26,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "LAT = [16.47, 16.47, 20.09, 22.39, 25.23, 22.00, 20.47, 17.20, 16.30, 14.05, 16.53, 21.52, 19.41, 20.09]\n",
-    "LON = [96.10, 94.44, 92.54, 93.37, 97.24, 96.05, 97.02, 96.29, 97.38, 98.12, 97.38, 95.59, 97.13, 94.55]\n",
-    "\n",
-    "# Fot collecting statistics\n",
-    "stats = []\n",
-    "\n",
-    "coords = []\n",
-    "for i in range(len(LAT)):\n",
-    "    coords.append((LAT[i], LON[i]))\n",
-    "    \n",
-    "matrix = {}\n",
-    "for i, city1 in enumerate(coords):\n",
-    "    for j, city2 in enumerate(coords):\n",
-    "        dist = vincenty(city1, city2).km\n",
-    "        matrix[i, j] = dist"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "# Fitness function.\n",
+    "# It simply calculates the distance in kilometers of the current path.\n",
     "def fitness(chromosome):\n",
     "    score = 0\n",
     "    for i in range(len(chromosome)):\n",
@@ -58,21 +38,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def current_best(ga_engine):\n",
+    "# Callback called each time for each generation.\n",
+    "def tsp_callback(ga_engine):\n",
     "    stats.append(ga.getStatistics().asTuple())\n",
     "    return False"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Initializator for the 1DList.\n",
+    "# Simply creates a list containing the cities indexes and shuffle it.\n",
     "def list_initializator(genome, **args):\n",
     "    cities = [i for i in range(len(coords))]\n",
     "    random.shuffle(cities)\n",
@@ -81,35 +64,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def save_stats(filename):\n",
+    "# Save the GA statistics in `filename`.\n",
+    "def save_stats(filename, stats):\n",
     "    header = 'rawMax;rawMin;rawAve;rawDev;rawVar;fitMax;fitMin;fitAve'\n",
-    "    np.savetxt(filename, stats, '%.2f', delimiter=';', header=header, comments='')"
+    "    np.savetxt(filename, stats, '%.2f', delimiter=';', header=header, comments='')\n",
+    "    print('Saved stats into ' + filename)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Gen. 0 (0.00%): Max/Min/Avg Fitness(Raw) [8013.80(8301.26)/4782.55(4374.56)/6678.17(6678.17)]\n",
-      "Gen. 50 (16.67%): Max/Min/Avg Fitness(Raw) [5115.11(6055.07)/3827.01(3346.76)/4262.59(4262.59)]\n",
-      "Gen. 100 (33.33%): Max/Min/Avg Fitness(Raw) [5018.98(6099.94)/3817.90(3346.76)/4182.48(4182.48)]\n",
-      "Gen. 150 (50.00%): Max/Min/Avg Fitness(Raw) [5148.75(6051.56)/3830.67(3346.76)/4290.63(4290.63)]\n",
-      "Gen. 200 (66.67%): Max/Min/Avg Fitness(Raw) [5244.68(6313.54)/3909.97(3346.76)/4370.57(4370.57)]\n",
-      "Gen. 250 (83.33%): Max/Min/Avg Fitness(Raw) [5079.00(6871.06)/3948.34(3346.76)/4232.50(4232.50)]\n",
-      "Gen. 300 (100.00%): Max/Min/Avg Fitness(Raw) [5154.29(6523.68)/3929.61(3346.76)/4295.24(4295.24)]\n",
-      "Total time elapsed: 2.281 seconds.\n",
+      "Gen. 0 (0.00%): Max/Min/Avg Fitness(Raw) [8108.93(8156.41)/5119.59(5062.05)/6757.44(6757.44)]\n",
+      "Gen. 50 (16.67%): Max/Min/Avg Fitness(Raw) [5085.34(6201.56)/3911.84(3482.56)/4237.79(4237.79)]\n",
+      "Gen. 100 (33.33%): Max/Min/Avg Fitness(Raw) [5009.11(5842.42)/3797.51(3421.46)/4174.26(4174.26)]\n",
+      "Gen. 150 (50.00%): Max/Min/Avg Fitness(Raw) [5041.78(6005.27)/3803.31(3346.76)/4201.48(4201.48)]\n",
+      "Gen. 200 (66.67%): Max/Min/Avg Fitness(Raw) [5246.69(6349.54)/3918.73(3346.76)/4372.24(4372.24)]\n",
+      "Gen. 250 (83.33%): Max/Min/Avg Fitness(Raw) [5580.72(6897.16)/4110.78(3346.76)/4650.60(4650.60)]\n",
+      "Gen. 300 (100.00%): Max/Min/Avg Fitness(Raw) [5044.00(6405.38)/3876.32(3346.76)/4203.33(4203.33)]\n",
+      "Total time elapsed: 2.384 seconds.\n",
       "- GenomeBase\n",
       "\tScore:\t\t\t 3346.761974\n",
-      "\tFitness:\t\t 3929.608979\n",
+      "\tFitness:\t\t 3876.323350\n",
       "\n",
       "\tParams:\t\t {}\n",
       "\n",
@@ -134,47 +119,92 @@
       "\n",
       "- G1DList\n",
       "\tList size:\t 14\n",
-      "\tList:\t\t [0, 1, 13, 2, 3, 4, 5, 11, 6, 12, 7, 10, 8, 9]\n",
+      "\tList:\t\t [2, 13, 1, 0, 9, 8, 10, 7, 12, 6, 11, 5, 4, 3]\n",
       "\n",
-      "\n"
+      "\n",
+      "Saved stats into stats/edge_pop100_gen300_01062018-1436.csv\n"
      ]
     }
    ],
    "source": [
-    "# Chromosome representation\n",
+    "# GPS position of each city.\n",
+    "LAT = [16.47, 16.47, 20.09, 22.39, 25.23, 22.00, 20.47, 17.20, 16.30, 14.05, 16.53, 21.52, 19.41, 20.09]\n",
+    "LON = [96.10, 94.44, 92.54, 93.37, 97.24, 96.05, 97.02, 96.29, 97.38, 98.12, 97.38, 95.59, 97.13, 94.55]\n",
     "\n",
-    "# genome = bitstring\n",
+    "# Create a 1D list of tuples with latitude and longitude for each city.\n",
+    "coords = []\n",
+    "for i in range(len(LAT)):\n",
+    "    coords.append((LAT[i], LON[i]))\n",
+    "\n",
+    "# Create a distance matrix between each city.\n",
+    "matrix = {}\n",
+    "for i, city1 in enumerate(coords):\n",
+    "    for j, city2 in enumerate(coords):\n",
+    "        dist = vincenty(city1, city2).km\n",
+    "        matrix[i, j] = dist\n",
+    "        \n",
+    "# Constants.\n",
+    "POPULATION_SIZE = 100\n",
+    "MUTATION_RATE   = 0.01\n",
+    "CROSSOVER_RATE  = 0.9\n",
+    "GENERATIONS_NB  = 300\n",
+    "CROSSOVER_FUNC  = Crossovers.G1DListCrossoverEdge\n",
+    "\n",
+    "# Array for collecting statistics.\n",
+    "stats = []\n",
+    "\n",
+    "# The chromosome is represented by a 1DList which contains the cities indexes [0,13]\n",
     "genome = G1DList.G1DList(len(coords))\n",
+    "\n",
+    "# Set initializator function.\n",
     "genome.initializator.set(list_initializator)\n",
     "\n",
-    "# how to compute the fitness\n",
+    "# Set fitness function.\n",
     "genome.evaluator.set(fitness)\n",
     "\n",
-    "genome.crossover.set(Crossovers.G1DListCrossoverEdge)\n",
+    "# Set crossover function.\n",
+    "genome.crossover.set(CROSSOVER_FUNC)\n",
     "\n",
-    "# GA initialisation\n",
+    "# GA initialization.\n",
     "ga = GSimpleGA.GSimpleGA(genome)\n",
-    "ga.setPopulationSize(100)\n",
-    "ga.setMutationRate(0.01)\n",
-    "ga.setCrossoverRate(0.9)\n",
+    "ga.setPopulationSize(POPULATION_SIZE)\n",
+    "ga.setMutationRate(MUTATION_RATE)\n",
+    "ga.setCrossoverRate(CROSSOVER_RATE)\n",
+    "# Elitism is important for TSP.\n",
     "ga.setElitism(True)\n",
+    "# We aim for minimization.\n",
     "ga.setMinimax(Consts.minimaxType[\"minimize\"])\n",
     "\n",
     "# Number of generations\n",
-    "ga.setGenerations(300)\n",
+    "ga.setGenerations(GENERATIONS_NB)\n",
     "\n",
     "# In case we want to monitor the evolution process\n",
     "# execute the function current_best every generation\n",
-    "ga.stepCallback.set(current_best)\n",
+    "ga.stepCallback.set(tsp_callback)\n",
     "\n",
     "ga.evolve(freq_stats=50)\n",
     "\n",
     "# Final best solution\n",
     "print(ga.bestIndividual())\n",
     "\n",
-    "save_stats('stats/edge_crossover.csv')\n",
+    "# Save statistics.\n",
+    "if CROSSOVER_FUNC == Crossovers.G1DListCrossoverEdge:\n",
+    "    crossover_name = 'edge'\n",
+    "else:\n",
+    "    crossover_name = 'perso'\n",
+    "    \n",
+    "now = datetime.datetime.now()\n",
     "\n",
-    "# [1, 13, 2, 3, 4, 5, 11, 6, 12, 7, 10, 8, 9, 0]"
+    "save_stats('stats/' +\n",
+    "               crossover_name +\n",
+    "               '_pop' + str(POPULATION_SIZE) +\n",
+    "               '_gen' + str(GENERATIONS_NB) +\n",
+    "               '_' + now.strftime('%d%m%Y-%H%M') +\n",
+    "               '.csv',\n",
+    "           stats)\n",
+    "\n",
+    "# Best path found: [1, 13, 2, 3, 4, 5, 11, 6, 12, 7, 10, 8, 9, 0]\n",
+    "# For crossovers inspiration: https://www.hindawi.com/journals/cin/2017/7430125/"
    ]
   }
  ],
